# wasmer-go

./: BUILD.bazel  MODULE.bazel  go.mod
wasmer/: BUILD.bazel  cgo.go
wasmer/packaged/lib/: dummy.go
wasmer/packaged/lib/darwin-amd64/: BUILD.bazel
wasmer/packaged/lib/linux-aarch64/: BUILD.bazel
