# gazelle:ignore
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wasmer",
    srcs = [
        "cgo.go",
        "config.go",
        "config_darwin.go",
        "config_linux.go",
        "config_opcodes.go",
        "engine.go",
        "error.go",
        "exports.go",
        "exporttype.go",
        "extern.go",
        "externtype.go",
        "function.go",
        "functiontype.go",
        "global.go",
        "globaltype.go",
        "import_object.go",
        "importtype.go",
        "instance.go",
        "limits.go",
        "memory.go",
        "memorytype.go",
        "module.go",
        "name.go",
        "pages.go",
        "store.go",
        "table.go",
        "tabletype.go",
        "target.go",
        "trap.go",
        "value.go",
        "valuetype.go",
        "wasi.go",
        "wasmer.go",
        "wat.go",
    ],
    cdeps = ["lib"],
    cgo = True,
    clinkopts = ["-lm -ldl"],
    copts = ["-Ipackaged/include"],
    importpath = "github.com/NMAC427/wasmer-go/wasmer",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "lib",
    srcs = select({
        "@rules_go//go/platform:linux_amd64": ["//wasmer/packaged/lib/linux-amd64:libwasmer.so"],
        "@rules_go//go/platform:linux_arm64": ["//wasmer/packaged/lib/linux-aarch64:libwasmer.so"],
        "@rules_go//go/platform:darwin_amd64": ["//wasmer/packaged/lib/darwin-amd64:libwasmer.dylib"],
        "@rules_go//go/platform:darwin_arm64": ["//wasmer/packaged/lib/darwin-aarch64:libwasmer.dylib"],
        "//conditions:default": ["UNSUPPORTED_PLATFORM"],
    }),
    hdrs = [
        "packaged/include/wasm.h",
        "packaged/include/wasmer.h",
    ],
    includes = ["packaged/include"],
    strip_include_prefix = "packaged/include",
    visibility = ["//visibility:public"],
)
